1999-10-21  Ettore Perazzoli  <ettore@gnu.org>

	* libgnomevfs/gnome-vfs-private-types.h: New opaque
	`GnomeVFSIOBuf' typedef for the struct defined in
	`gnome-vfs-iobuf.c'.

	* libgnomevfs/gnome-vfs-private.h: #include "gnome-vfs-iobuf.h".

	* libgnomevfs/gnome-vfs-iobuf.h: New header file for
	`gnome-vfs-iobuf.c'.

	* libgnomevfs/gnome-vfs-iobuf.c: New file implementing buffered
	I/O on top of low-level Unix file descriptors.

1999-10-20  Ettore Perazzoli  <ettore@gnu.org>

	* modules/extfs-method.c (match): Apply filter.
	(vfs_module_shutdown): Close all the handles.
	(do_close): Remove the handle from the handle list.

	* README: Added some info about the `vfs-run' wrapper.

	* configure.in: Subst `@TOP_BUILDDIR@' with the path to the top
	building directory.  Build `$(top_builddir)/test/vfs-run' from
	`$(top_srcdir)/test/vfs-run.in'.

	* test/vfs-run.in (GNOME_VFS_MODULE_PATH): New file.

	* libgnomevfs/gnome-vfs-method.c (gnome_vfs_method_get): Set the
	effective UID/GID to the real UID/GID when loading the module, and
	restore them afterwards.  This should prevent exploits to
	setuid/setgid applications by using `GNOME_VFS_MODULE_PATH'.
	(module_get_sane_handle): Renamed to `load_module'.  Added
	debugging message displaying the complete name of the module that
	is being loaded.

	* libgnomevfs/gnome-vfs-method.c: New variable `module_path_list'.
	(init_hash_table): New helper function.
	(gnome_vfs_method_init): Use it.
	(init_path_list): New helper function to initialize
	`module_path_list' through the `GNOME_VFS_MODULE_PATH' environment
	variable.
	(install_path_list): New helper function used by `init_path_list'.
	(gnome_vfs_method_init): Use it.
	(load_module_in_path_list): New function to search for a module in
	the path list.
	(gnome_vfs_method_get): Use it.
	(module_get_sane_handle): Made const-safe.

1999-10-19  Ettore Perazzoli  <ettore@gnu.org>

	* modules/extfs-method.c (read_directory_list): New parameter